--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "normalize.css": "^8.0.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
   }
